--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -32,7 +32,7 @@ jobs:
 
       - name: Auto-format code with autopep8
         run: |
-          autopep8 --in-place --aggressive --max-line-length 120 *.py  # Fix formatting issues with autopep8
+          autopep8 --in-place --aggressive --max-line-length 120 **/*.py  # Fix formatting issues with autopep8
 
       - name: Auto-format docstrings with docformatter
         run: |
@@ -46,32 +46,17 @@ jobs:
       # - name: Check type hints with mypy
       #   run: |
       #     mypy . --ignore-missing-imports --install-types # Run mypy for type checking
-      - name: Delete existing branch if it exists
-        run: |
-          git fetch origin
-          if git branch -r | grep -q "origin/auto-format-code"; then
-            set +e  # Allow the script to continue even if this command fails
-            git push origin --delete auto-format-code || echo "Branch deletion failed. It may not exist or is locked."
-            git remote prune origin  # Clean up remote-tracking references
-            git branch -D auto-format-code || echo "Local branch deletion failed. It may not exist."
-            set -e  # Re-enable strict error checking
-          fi
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Auto-format code with ruff, autopep8 and docformatter"
-          title: "Auto-format Code"
-          body: |
-            This pull request automatically applies code formatting changes using ruff, autopep8, and docformatter.
-          branch: "auto-format-code"
-          base: "main"
-        continue-on-error: true
+      - name: Commit and push changes (if any)
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add .
+          git diff --exit-code || (git commit -m "Auto-format code with ruff, autopep8 and docformatter" && git push)
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-  generate-docstrings:
+  generate-docstrings_linux:
     strategy:
       matrix:
         os: [ ubuntu-latest]
@@ -94,24 +79,17 @@ jobs:
       - name: Generate docstrings with numpydoc style
         run: |
           find . -name "*.py" ! -path "./docs/auto_examples/*" -exec pydocstringformatter -w --style numpydoc --numpydoc-section-order --numpydoc-name-type-spacing --numpydoc-section-spacing --numpydoc-section-hyphen-length --no-final-period {} +
-
-      - name: Delete existing branch if it exists
+        
+      - name: Commit and push changes (if any)
         run: |
-          git fetch origin
-          if git branch -r | grep -q "origin/generate-docstrings"; then
-            set +e  # Allow the script to continue even if this command fails
-            git push origin --delete generate-docstrings || echo "Branch deletion failed. It may not exist or is locked."
-            set -e  # Re-enable strict error checking
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          if [ -n "$(git status --porcelain)" ]; then
+            git add .
+            git commit -m "Generate docstrings using pydocstringformatter (numpydoc style)"
+            git push
+          else
+            echo "No changes to commit"
           fi
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v6
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Generate docstrings using pydocstringformatter (numpydoc style)"
-          title: "Generate docstrings"
-          body: |
-            This pull request automatically applies docstring generation using pydocstringformatter with the numpydoc style.
-          branch: "generate-docstrings"  # The name of the branch to create
-          base: "main"  # Or "master", depending on your main branch
-        continue-on-error: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
