--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -1,61 +1,53 @@
-name: Formatting and Docstring Generation
+name: Code Quality
 
 on:
   push:
     branches:
-      - main  # Trigger on pushes to the 'main' branch
-      - master
+      - main
   pull_request:
     branches:
-      - main  # Trigger on pull requests targeting the 'main' branch
-      - master
+      - main
 
 jobs:
-  formatting:
-    strategy:
-      matrix:
-        os: [ ubuntu-latest]
-        python-version: [ "3.12" ]
-    runs-on: ${{ matrix.os }}
+  quality:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v4
+        uses: actions/checkout@v4
         with:
-          python-version: ${{ matrix.python-version }}  # Adjust the version as needed
+          fetch-depth: 0
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Python 3.13
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.13"
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install ruff autopep8 mypy pydocstringformatter # Install required tools
+          pip install -e ".[dev]"
 
-      - name: Check code style with ruff
+      - name: Auto-format code with ruff
         run: |
-          ruff format .
-          ruff check --output-format=github .  # Check code style with ruff
+          ruff format src tests
+          ruff check --fix src tests
 
-      - name: Auto-format code with autopep8
+      - name: Format docstrings
         run: |
-          autopep8 --in-place --aggressive --max-line-length 120 *.py  # Fix formatting issues with autopep8
-
-      - name: Generate docstrings with numpydoc style
-        run: |
-          find . -name "*.py" ! -path "./docs/auto_examples/*" -exec pydocstringformatter -w --style numpydoc --numpydoc-section-order --numpydoc-name-type-spacing --numpydoc-section-spacing --numpydoc-section-hyphen-length --no-final-period {} +
-
-      # - name: Check type hints with mypy
-      #   run: |
-      #     mypy . --ignore-missing-imports --install-types # Run mypy for type checking
+          find src tests -name "*.py" -exec pydocstringformatter -w --style numpydoc {} +
 
       - name: Commit and push changes (if any)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         run: |
-          git config --global user.name "github-actions"
-          git config --global user.email "github-actions@github.com"
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           if [ -n "$(git status --porcelain)" ]; then
             git add .
-            git commit -m "Auto-format code with ruff, autopep8 and pydocstringformatter"
+            git commit -m "style: auto-format code with ruff and pydocstringformatter"
             git push
           else
             echo "No changes to commit"
